# local-dir-rag

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-test.yml  docker-publish.yml  publish-docker.yml  publish-pypi.yml  publish-testpypi.yml
docs/: changelog.md
local_dir_rag/: __init__.py  document_loader.py  embed.py  file_tracker.py  main.py  query_with_rag.py  text_processor.py  vector_store.py
local_rag/: __init__.py  document_loader.py  embed.py  main.py  query_with_rag.py  text_processor.py  vector_store.py
tests/: __init__.py  conftest.py  test_document_loader.py  test_embed.py  test_file_tracker.py  test_main.py  test_query_with_rag.py  test_text_processor.py  test_vector_store.py
