[project]
name = "local-dir-rag"
version = "0.2.0"
description = "RAG from documents in a local directory"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
local-dir-rag = "local_dir_rag.main:main"
