[tool.poetry]
requires-poetry = ">=2.0,<3.0"

[project]
name = "local-dir-rag"
description = "RAG from documents in a local directory"
version = "0.3.0"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "pycobertura (>=4.0.0,<5.0.0)",
    "black (>=24.2.0,<25.0.0)",
    "pylint (>=3.0.2,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
local-dir-rag = "local_dir_rag.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=local_dir_rag --cov-report=term-missing"

[tool.coverage.run]
source = ["local_dir_rag"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
