[tool.poetry]
requires-poetry = ">=2.0,<3.0"

[project]
name = "local-dir-rag"
description = "RAG from documents in a local directory"
version = "0.4.1"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "python-dotenv ==1.2.1",
    "langchain ==1.1.2",
    "langchain-community ==0.4.1",
    "langchain-openai ==1.1.0",
    "faiss-cpu ==1.13.1",
    "pypdf ==6.4.1",
    "sentence-transformers ==5.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest ==9.0.2",
    "pytest-cov ==7.0.0",
    "pycobertura ==4.1.0",
    "black ==25.12.0",
    "pylint ==4.0.4",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
local-dir-rag = "local_dir_rag.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=local_dir_rag --cov-report=term-missing"

[tool.coverage.run]
source = ["local_dir_rag"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
